--- a/app/index.html
+++ b/app/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Soq</title>
+    <title>soq28782076</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for 'head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/soq.css">
+    <link rel="stylesheet" href="assets/soq28782076.css">
 
     {{content-for 'head-footer'}}
   </head>
@@ -18,7 +18,7 @@
     {{content-for 'body'}}
 
     <script src="assets/vendor.js"></script>
-    <script src="assets/soq.js"></script>
+    <script src="assets/soq28782076.js"></script>
 
     {{content-for 'body-footer'}}
   </body>
